@@ -1,3 +1,7 @@
+2021-12-20  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* examples/text_draw_3drb: Added
+
 2021-12-19  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/models_mesh_picking.rb: Added
